[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "extension_helpers",
            "astropy",
            "wheel"]

build-backend = 'setuptools.build_meta'


[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

known_third_party = ["IPython", "astropy", "matplotlib", "numpy", "pytest", "scipy", "setuptools", "tqdm", "typing_extensions", "wrapt"]
known_localfolder = "utilipy"

import_heading_stdlib = "BUILT-IN"
import_heading_thirdparty = "THIRD PARTY"
import_heading_firstparty = "FIRST PARTY"
import_heading_localfolder = "PROJECT-SPECIFIC"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
